--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@ body {
   color: var(--brand-color-text);
 }
 
+header {
+  border: 1px solid #ECECEC;
+}
+
 .web {
   width: 145px;
   height: 31px;
@@ -110,9 +114,6 @@ h1 {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   background-color: var(--brand-color);
-}
-
-.main-button-text {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
@@ -239,4 +240,54 @@ footer {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+
+.buttons {
+  width: 93px;
+  height: 38px;
+  left: 639px;
+  top: 174px;
+  background: var(--brand-color-background-2);
+  border-radius: 4px;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--brand-color-header);
+}
+
+.buttons:hover,
+.buttons:focus {
+  background-color: var(--brand-color);
+  color: #ffffff;
+}
+
+.project-name {
+width: 322px;
+height: 36px;
+left: 239px;
+top: 576px;
+font-weight: 700;
+font-size: 18px;
+line-height: 2
+letter-spacing: 0.06em;
+color: var(--brand-color-header)
+}
+
+.project-type {
+  width: 322px;
+height: 30px;
+left: 239px;
+top: 616px;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.88;
+letter-spacing: 0.03em;
+color: var(--brand-color-text);
+}
+
+address {
+  font-style: normal;
 }
