--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ h1 {
   text-align: center;
   letter-spacing: 0.06em;
   color: #ffffff;
+  cursor: pointer;
 }
 
 h3 {
@@ -263,6 +264,7 @@ footer {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--brand-color-header);
+  cursor: pointer;
 }
 
 .buttons:hover,
