Usunięcie selektorów tagów

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,8 @@
 }
 
 body {
-  font-family: "Roboto", "Helvetica Neue", sans-serif;
+  font-family: "Roboto", "Raleway", sans-serif;
   color: var(--brand-color-text);
-}
-
-.header {
-  border: 1px solid #ececec;
 }
 
 .logo {
@@ -86,7 +82,7 @@ body {
   background-color: var(--brand-color-background-1);
 }
 
-h1 {
+.h1 {
   width: 696px;
   height: 120px;
   left: 452px;
@@ -184,7 +180,7 @@ h1 {
   color: #ffffff;
 }
 
-footer {
+.footer {
   width: 1600px;
   height: 252px;
   left: 0px;
@@ -197,6 +193,7 @@ footer {
   height: 21px;
   left: 215px;
   top: 2208px;
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -204,6 +201,7 @@ footer {
 }
 
 .mail-footer {
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -212,6 +210,7 @@ footer {
 }
 
 .telephone-footer {
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -274,8 +273,4 @@ footer {
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--brand-color-text);
-}
-
-address {
-  font-style: normal;
 }
