Dodanie borderów do portfolio.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,22 @@ body {
   color: #ffffff;
 }
 
+.figure {
+  display: table;
+}
+
+.images-list-item {
+  display: block;
+}
+
+.figcaption {
+  display: table-caption;
+  caption-side: bottom;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
+
 .project-name {
   width: 322px;
   height: 36px;
